<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quiz</string>
    <string name="exit">Exit</string>
    <string name="error">ERROR</string>
    <string name="default_language">fa</string>
    <string name="xml_prefix">q_</string>
    <string name="xml_model1_prefix">jobs_</string>
    <string name="start_quiz">Start game</string>
    <string name="self_cat">Personality</string>
    <string name="marry_cat">Marriage</string>
    <string name="job_cat">Job</string>
    <string name="job_model1">Halland model</string>
    <string name="job_model2">MITB model</string>
    <string name="job_others">Others</string>
    <string name="job_model1_activities">Activities</string>
    <string name="job_model1_expriences">Expriences</string>
    <string name="job_model1_jobs">Jobs</string>
    <string name="job_model1_self_det">Self det.</string>
    <string name="job_model1_explain">Explain</string>
    <string name="job_model1_result">Result</string>
    <string name="job_model2_tests">Tests</string>
    <string name="about_app">about_app</string>
    <string name="app_setting">setting</string>
    <string name="check_more_games">Check more games</string>
    <string name="check_more_games_url">http://www.google.com</string>
    <string name="rate_game">Rate game</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="title_activity_levels">LevelsActivity</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="question">Question</string>
    <string name="intro">Introduction</string>
    <string name="score">Your score for this level is:</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="start_test">Start test</string>
    <string name="tip">Tip</string>
    <string name="lock">Lock</string>
    <string name="answer">Answer</string>
    <string name="question_image">Question image</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="wrong_answer">Wrong answer!</string>
    <string name="reset_level">Reset level</string>
    <string name="exit_dialog_header">Exit</string>
    <string name="exit_dialog_text">Are you sure you want to exit?</string>
    <string name="positive_ans">Yes</string>
    <string name="negative_ans">No</string>
    <string name="logoText">گروه برنامه نویسی نخل</string>
    <string name="pref_font">تنظیمات قلم</string>
    <string name="pref_font_name">نام قلم</string>
    <string name="pref_font_size">اندازه ی قلم</string>
    <string name="pref_wallpaper">تنظیمات پس زمینه</string>
    <string name="pref_wallpaper_name">پس زمینه</string>
    <string name="explain_text_dlg">Explain text</string>
    <string name="ok_button_dlg">Ok</string>
    
    <string name="model1_result_title">تیپ شخصیتی شما</string>
    <string name="model1_result_type">نوع شخصیت شما</string>
    <string name="model1_result_letter1">تیپ اول</string>
    <string name="model1_result_letter2">تیپ دوم</string>
    <string name="model1_result_letter3">تیپ سوم</string>
    <string name="model1_education">تحصیلات</string>
    <string name="model1_result_priority">مشاغل مناسب برای شما بر حسب اولویت (از زیاد به کم)</string>
    <string name="model1_result_jobs">لیست مشاغل</string>
    <string name="model2_rezaiat">فعالیت های لازم برای کسب رضایت شغلی</string>
    <string name="model2_rezaiat_activities">فعالیت های لازم</string>
    <string name="model2_jobs_title">مشاغل مناسب</string>    
    
    <!-- Do not change during translation -->
    <string name="exercise_answers_buttons_weight">6</string>

</resources>