<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="horizontal" >

    <FrameLayout
        android:id="@+id/placeholder_left"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewResultTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/model1_result_title"
            android:textDirection="rtl"
            android:textStyle="" />

        <TextView
            android:id="@+id/textViewResultType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/entekhab_textview"
            android:text="@string/model1_result_type"
            android:textDirection="rtl"
            android:textStyle="" />

        <TextView
            android:id="@+id/textViewRezaiat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/model2_rezaiat"
            android:textDirection="rtl" />

        <TextView
            android:id="@+id/textViewRezaiatActivities"
            android:layout_width="match_parent"
            android:layout_height="150dip"
            android:layout_gravity="center"
            android:background="@drawable/entekhab_textview"
            android:scrollbars="vertical"
            android:text="@string/model2_rezaiat_activities"
            android:textDirection="rtl" />

        <TextView
            android:id="@+id/textViewJobsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/model2_jobs_title"
            android:textDirection="rtl" />

        <TextView
            android:id="@+id/textViewJobs"
            android:layout_width="match_parent"
            android:layout_height="150dip"
            android:layout_gravity="center"
            android:background="@drawable/entekhab_textview"
            android:scrollbars="vertical"
            android:text="@string/model1_result_jobs"
            android:textDirection="rtl" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/placeholder_right"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
    </FrameLayout>

</LinearLayout>