<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context=".CategoriesActivity" >

    <FrameLayout
        android:id="@+id/placeholder_left"
        android:layout_width="0px"
        android:layout_height="1dip"
        android:layout_weight="1" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/app_name"
            android:visibility="gone"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/buttonSelf"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/button_main"
            android:text="@string/self_cat" />

        <Button
            android:id="@+id/buttonMarriage"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/button_main"
            android:text="@string/marry_cat" />

        <Button
            android:id="@+id/buttonJob"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/button_main"
            android:text="@string/job_cat" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/placeholder_right"
        android:layout_width="0px"
        android:layout_height="1dip"
        android:layout_weight="1" >
    </FrameLayout>

</LinearLayout>