<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="horizontal">

    <FrameLayout
        android:id="@+id/placeholder_left"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4" 
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewResultTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/model1_result_title"
            android:textDirection="rtl" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRowTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewTitle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/model1_result_letter3" />

                <TextView
                    android:id="@+id/textViewTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/model1_result_letter2" />

                <TextView
                    android:id="@+id/textViewTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/model1_result_letter1" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/editTextTitle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:editable="false"
                    android:gravity="center" >
                </EditText>

                <EditText
                    android:id="@+id/editTextTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:editable="false"
                    android:gravity="center" />

                <EditText
                    android:id="@+id/editTextTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:editable="false"
                    android:gravity="center" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewEducation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/model1_education"
                android:textDirection="rtl" />

            <Spinner
                android:id="@+id/spinnerEducation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textDirection="rtl" />

            <TextView
                android:id="@+id/textViewPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/model1_result_priority"
                android:textDirection="rtl" />

            <TextView
                android:id="@+id/textViewJobs"
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:layout_gravity="center"
                android:background="@drawable/entekhab_textview"
                android:scrollbars="vertical"
                android:text="@string/model1_result_jobs"
                android:textDirection="rtl" />

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/placeholder_right"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
    </FrameLayout>

</LinearLayout>